--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: ruby
 rvm:
-- 2.3.1
-before_install: gem install bundler -v 1.12.5
-before_script:
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
-- sleep 3
+  - 2.3.1
 addons:
-  firefox: 31.0esr
+  chrome: stable
+before_install:
+  - gem install bundler -v 1.12.5
+  - wget http://chromedriver.storage.googleapis.com/2.36/chromedriver_linux64.zip
+  - unzip chromedriver_linux64.zip
+  - rm chromedriver_linux64.zip
+  - sudo mv -f chromedriver /usr/local/bin/
+  - sudo chmod +x /usr/local/bin/chromedriver
+  - google-chrome-stable --headless --no-sandbox
 script:
-- RAILS_ENV=test bundle exec rake db:create db:migrate
-- bundle exec rspec spec
+  - RAILS_ENV=test bundle exec rake db:create db:migrate
+  - bundle exec rspec spec
 deploy:
   provider: rubygems
   api_key:
